# prismcat

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  test.html
docs/source/: conf.py  index.rst
prismcat/: prismcat.py
